--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- https://www.figma.com/file/mnLY69cYE5cqWM5w6n5hXx/Seo-%26-Digital-Marketing-Landing-Page?node-id=190%3A1426&mode=dev -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,6 +24,28 @@
                     <label class="menu__btn" for="menu__toggle">
                         <span></span>
                     </label>
+
+                    <ul class="menu__box">
+                        <h2>MENU</h2>
+                        <h3>MAN</h3>
+                        <li><a class="menu__item" href="#m_accessories">Accessories</a></li>
+                        <li><a class="menu__item" href="#m_bags">Bags</a></li>
+                        <li><a class="menu__item" href="#m_denim">Denim</a></li>
+                        <li><a class="menu__item" href="#m_t-shirts">T-Shirts</a></li>
+                        <h3>WOMAN</h3>
+                        <li><a class="menu__item" href="#w_accessories">Accessories</a></li>
+                        <li><a class="menu__item" href="#w_jackets&coats">Jackets & Coats</a></li>
+                        <li><a class="menu__item" href="#w_polos">Polos</a></li>
+                        <li><a class="menu__item" href="#w_t-shirts">T-Shirts</a></li>
+                        <li><a class="menu__item" href="#w_shirts">Shirts</a></li>
+                        <h3>KIDS</h3>
+                        <li><a class="menu__item" href="#k_accessories">Accessories</a></li>
+                        <li><a class="menu__item" href="#k_jackets&coats">Jackets & Coats</a></li>
+                        <li><a class="menu__item" href="#k_polos">Polos</a></li>
+                        <li><a class="menu__item" href="#k_t-shirts">T-Shirts</a></li>
+                        <li><a class="menu__item" href="#k_shirts">Shirts</a></li>
+                        <li><a class="menu__item" href="#k_bags">Bags</a></li>
+                    </ul>
                 </div>
                 <button><img src="assets\images\Forma 1 (2).png" alt="profile"></button>
                 <button><img src="assets\images\Forma 1 (3).png" alt="cart"></button>
@@ -164,6 +188,57 @@
                 <button>Browse All Product</button>
             </div>
         </div>
-    </main>    
+    </main> 
+    <!-- Урок 16_ДЗ: Добавляем весь контент подвала сайта -->
+    <div class="main__bottom">
+        <div class="footer__info">
+            <div class="footer__info__card">
+                <img src="assets\images\car.png" alt="car">
+                <h2>Free Delivery</h2>
+                <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+            </div>
+            <div class="footer__info__card">
+                <img src="assets\images\discount.png" alt="discount">
+                <h2>Sales & discounts</h2>
+                <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+            </div>
+            <div class="footer__info__card">
+                <img src="assets\images\crown.png" alt="crown">
+                <h2>Quality assurance</h2>
+                <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+            </div>
+        </div>
+        <div class="footer__subscribe">
+            <div class="footer__blur">
+                <div class="footer__subscribe__info">
+                    <img src="assets\images\Intersect.png" alt="woman">
+                    <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
+                </div>
+                <div class="footer__subsc_subsc">
+                    <div class="footer__subsc_subsc__text">
+                        <h2>SUBSCRIBE </h2>
+                        <p>FOR OUR NEWLETTER AND PROMOTION</p>
+                    </div>
+                    <div class="footer__subsc__form__btn">
+                        <form action="#">
+                            <input required type="email" placeholder="Enter Your Email">
+                            <button type="submit">Subscribe</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="footer__navbar">
+            <p>© 2022  Brand  All Rights Reserved.</p>
+            <div class="footer__navbar__icons">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-pinterest-p"></a>
+                <a href="#" class="fa fa-twitter"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
